welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: identifier expected but 'for' found.
    for (i <- 0 to x-1)
    ^