welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
      
    var x = tab.length.
    
    for (i <- 0 to x-1)
    {if (value == tab(i)) {return i}}
    return -1
    
    
    
    
    
    
    
    }

